--- a/circle.yml
+++ b/circle.yml
@@ -1,6 +1,6 @@
 machine:
   ruby:
-      version: 2.0.0-p648
+      version: 2.1.0
   java:
       version: oraclejdk8
   timezone: Asia/Saigon
@@ -11,7 +11,7 @@ machine:
       TERM: dumb
       REVIEWDOG_VERSION: 0.9.3
       ROOM_ID: 74244862
-      TEAM: "[To:2563074][To:2110258][To:2545418]"
+      TEAM: "[To:2563074][To:2110258][To:2545418][To:2311300]"
 dependencies:
   pre:
     - git fetch origin # sometimes circleci fail to fetch branches correctly, so fetch them expressly
